# maturin-nix

./: Cargo.nix  Cargo.toml  crate-hashes.json  crates-io.list  crates-io.nix  default.nix  flake.nix  license-mit  maturin-nix.nix
examples/: Cargo.nix  Cargo.toml  default.nix
examples/mm/: Cargo.toml
examples/mm/src/: lib.rs
examples/mmpy/: Cargo.toml
examples/mmpy/src/: lib.rs
examples/printer/: Cargo.toml
examples/printer/src/: lib.rs
maturin-nix/: Cargo.toml
maturin-nix/src/: main.rs
src/: main.rs
