[package]
name = "mmpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mm.path = "../mm"
ndarray = "0.15"
numpy = "0.16.2"
pyo3 = { version = "0.16.5", features = ["extension-module", "abi3-py37"] }
# pyo3 = { version = "0.16.5", features = ["extension-module"] }

[lib]
name = "mmpy"
crate-type = ["cdylib"]
