[package]
name = "printer"
version = "0.1.0"
edition = "2021"

[dependencies]
# pyo3 = { version = "0.16.4", features = [ "extension-module", "abi3-py37" ] }
pyo3 = { version = "0.16.4", features = [ "extension-module" ] }

[build-dependencies]
pyo3-build-config = "*"

[lib]
name = "printer"
crate-type = ["cdylib"]
